After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781413 - manager: fix crash if session fails to start
manager: fix crash if session fails to start
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-17 17:09 UTC by Ray Strode [halfline]
Modified: 2017-04-17 17:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
manager: fix crash if session fails to start (2.55 KB, patch)
2017-04-17 17:09 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2017-04-17 17:09:11 UTC
commit 5c9e120594839b0597bc7bb8d06be7ba1076c0d8 attempts to handle
a session failing to start, but messages up the signal prototype
leading to crash.

This commit fixes that.
Comment 1 Ray Strode [halfline] 2017-04-17 17:09:18 UTC
Created attachment 349955 [details] [review]
manager: fix crash if session fails to start
Comment 2 Ray Strode [halfline] 2017-04-17 17:10:21 UTC
Attachment 349955 [details] pushed as 0ab4f63 - manager: fix crash if session fails to start