manager: fix crash if session fails to start

commit 5c9e120594839b0597bc7bb8d06be7ba1076c0d8 attempts to handle
a session failing to start, but messages up the signal prototype
leading to crash.

This commit fixes that.

https://bugzilla.gnome.org/show_bug.cgi?id=781413